# viewpoint-mcp

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
crates/viewpoint-mcp/: Cargo.toml  README.md
crates/viewpoint-mcp-cli/: Cargo.toml  README.md
crates/viewpoint-mcp-cli/src/: main.rs
crates/viewpoint-mcp/src/: lib.rs
crates/viewpoint-mcp/src/browser/: config.rs  console.rs  context.rs  error.rs  mod.rs  state.rs
crates/viewpoint-mcp/src/browser/tests/: mod.rs
crates/viewpoint-mcp/src/server/: error.rs  mod.rs  protocol.rs  types.rs
crates/viewpoint-mcp/src/server/tests/: mod.rs  protocol_tests.rs
crates/viewpoint-mcp/src/snapshot/: capture.rs  classification.rs  element.rs  error.rs  format.rs  mod.rs  reference.rs  stale.rs
crates/viewpoint-mcp/src/snapshot/tests/: format_tests.rs  mod.rs
crates/viewpoint-mcp/src/tools/: browser_click.rs  browser_close.rs  browser_console_messages.rs  browser_context_close.rs  browser_context_create.rs  browser_context_list.rs  browser_context_save_storage.rs  browser_context_switch.rs  browser_drag.rs  browser_evaluate.rs  browser_file_upload.rs  browser_fill_form.rs  browser_handle_dialog.rs  browser_hover.rs  browser_install.rs  browser_mouse_click_xy.rs  browser_mouse_drag_xy.rs  browser_mouse_move_xy.rs  browser_navigate.rs  browser_navigate_back.rs  browser_network_requests.rs  browser_pdf_save.rs  browser_press_key.rs  browser_resize.rs  browser_scroll_into_view.rs  browser_select_option.rs  browser_snapshot.rs  browser_tabs.rs  browser_take_screenshot.rs  browser_type.rs  browser_wait_for.rs  error.rs  mod.rs  registry.rs  traits.rs
crates/viewpoint-mcp/src/tools/tests/: browser_click_tests.rs  browser_close_tests.rs  browser_console_messages_tests.rs  browser_context_close_tests.rs  browser_context_create_tests.rs  browser_context_list_tests.rs  browser_context_save_storage_tests.rs  browser_context_switch_tests.rs  browser_drag_tests.rs  browser_evaluate_tests.rs  browser_file_upload_tests.rs  browser_fill_form_tests.rs  browser_handle_dialog_tests.rs  browser_hover_tests.rs  browser_install_tests.rs  browser_mouse_click_xy_tests.rs  browser_mouse_drag_xy_tests.rs  browser_mouse_move_xy_tests.rs  mod.rs  (+14 more)
crates/viewpoint-mcp/src/transport/: error.rs  mod.rs  sse.rs  stdio.rs
crates/viewpoint-mcp/tests/: browser_integration.rs  connection_recovery.rs  context.rs  inspection.rs  interaction.rs  optional.rs  snapshot_edge_cases.rs  stale_refs.rs  stdio_transport.rs  tools_context.rs  tools_inspection.rs  tools_interaction.rs  tools_management.rs  tools_navigation.rs  tools_optional.rs
crates/viewpoint-mcp/tests/browser_integration/: mod.rs  snapshot_tests.rs  state_tests.rs
crates/viewpoint-mcp/tests/context/: close_tests.rs  create_tests.rs  integration_tests.rs  list_tests.rs  mod.rs  storage_tests.rs  switch_tests.rs
crates/viewpoint-mcp/tests/inspection/: console_network_tests.rs  evaluate_tests.rs  mod.rs  screenshot_tests.rs  snapshot_basic_tests.rs  snapshot_cache_tests.rs  snapshot_tests.rs  wait_tests.rs
crates/viewpoint-mcp/tests/interaction/: click_tests.rs  drag_tests.rs  form_tests.rs  iframe_tests.rs  key_tests.rs  mod.rs  scroll_tests.rs  type_tests.rs
crates/viewpoint-mcp/tests/optional/: mod.rs  pdf_tests.rs  vision_tests.rs
crates/viewpoint-mcp/tests/stale_refs/: detection.rs  edge_cases.rs  mod.rs  multi_context.rs
crates/viewpoint-mcp/tests/tools_management/: close_tests.rs  dialog_tests.rs  install_tests.rs  integration_tests.rs  mod.rs  resize_tests.rs  tabs_tests.rs
(+88 files in other folders)
