[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# HTTP/SSE server
axum = { version = "0.8", features = ["http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# API key generation
rand = "0.8"

# Async traits
async-trait = "0.1"

# Streaming utilities
tokio-stream = "0.1"

# Hex encoding
hex = "0.4"

# Browser automation
viewpoint-core = "0.2.12"
viewpoint-cdp = "0.2.12"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow these for now (async placeholders for future real browser integration)
unused_async = "allow"
# Cargo metadata not required at this stage
cargo_common_metadata = "allow"
# Multiple versions are fine for transitive deps
multiple_crate_versions = "allow"
# These are minor style issues
significant_drop_tightening = "allow"
option_if_let_else = "allow"
single_match_else = "allow"
missing_const_for_fn = "allow"
