[package]
name = "viewpoint-mcp-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for Viewpoint MCP server"
license = "MIT"

[[bin]]
name = "viewpoint-mcp"
path = "src/main.rs"

[dependencies]
# Library crate
viewpoint-mcp = { path = "../viewpoint-mcp" }

# Async runtime
tokio = { workspace = true }

# CLI parsing
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
integration = []

[lints]
workspace = true
