[package]
name = "viewpoint-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server library for browser automation via Viewpoint"
license = "MIT"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP/SSE server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# API key generation
rand = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Streaming utilities
tokio-stream = { workspace = true }

# Hex encoding
hex = { workspace = true }

# Base64 encoding for screenshots
base64 = "0.22"

# Browser automation
viewpoint-core = { workspace = true }
viewpoint-cdp = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
tempfile = "3.19"
regex = "1.12.2"
viewpoint-core.workspace = true

[features]
default = []
integration = []

[lints]
workspace = true
